@@ -37,6 +37,9 @@
 - Tests: Added hash-mode 11800 (Streebog-512)
 - Tests: Added hash-mode 11850 (HMAC-Streebog-512 (key = $pass), big-endian)
 - Tests: Added hash-mode 11860 (HMAC-Streebog-512 (key = $salt), big-endian)
+- Tests: Added hash-mode 13711 (VeraCrypt PBKDF2-HMAC-RIPEMD160 + XTS 512 bit)
+- Tests: Added hash-mode 13712 (VeraCrypt PBKDF2-HMAC-RIPEMD160 + XTS 1024 bit)
+- Tests: Added hash-mode 13713 (VeraCrypt PBKDF2-HMAC-RIPEMD160 + XTS 1536 bit)
 - Tests: Added hash-mode 13721 (VeraCrypt PBKDF2-HMAC-SHA512 + XTS 512 bit)
 - Tests: Added hash-mode 13722 (VeraCrypt PBKDF2-HMAC-SHA512 + XTS 1024 bit)
 - Tests: Added hash-mode 13723 (VeraCrypt PBKDF2-HMAC-SHA512 + XTS 1536 bit)
